2003-02-18  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.el (default-coded-charset-priority-list): Add
	`ideograph-gt-pj-k1' and `ideograph-gt-pj-k2'.

2003-02-17  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (ucs-big5): New coded-charset when `utf-2000'
	is provided; it was defined as a builtin coded-charset.
	(ideograph-gt): Likewise.

2003-02-16  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=gt-k): Renamed from `ideograph-gt-k'.
	(ideograph-gt-k): Changed to an alias for `=gt-k'.

2003-02-15  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=big5-cdp): Renamed from `chinese-big5-cdp'.
	(chinese-big5-cdp): Changed to an alias for `=big5-cdp'.

2003-02-15  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=big5-eten): Renamed from
	`chinese-big5-eten'.
	(chinese-big5-eten): Changed to an alias for `=big5-eten'.

2003-02-14  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (=big5-pua): Renamed from `chinese-big5-pua'.
	(chinese-big5-pua): Changed to an alias for `=big5-pua'.

2003-02-13  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=cbeta): Renamed from `ideograph-cbeta'.
	(ideograph-cbeta): Changed to an alias for `=cbeta'.

2003-02-11  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=jef-china3): Renamed from `china3-jef'.
	(china3-jef): Changed to an alias for `=jef-china3'.

2003-02-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Use
	`=jis-x0213-{1|2}-2000' instead of `japanese-jisx0213-{1|2}'.

	* mule/mule-conf.el (=jis-x0213-{1|2}-2000): Renamed from
	`japanese-jisx0213-{1|2}' when `utf-2000' is provided.
	(japanese-jisx0213-{1|2}): New alias for =jis-x0213-{1|2}-2000
	when `utf-2000' is provided.

2003-02-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* dumped-lisp.el (preloaded-file-list): Add